<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.example</groupId>
    <artifactId>projectmanagement</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>projectmanagement</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <javafx.version>21.0.6</javafx.version>
        <junit.version>5.9.1</junit.version>
        <module>com.example.projectmanagement</module>
        <jpackage.image-name>ProjectManagementTool</jpackage.image-name>
        <jpackage.vendor>rrru33</jpackage.vendor>
        <jpackage.app-version>1.0</jpackage.app-version>
        <image-extension>ico</image-extension> <!-- 防止空指针 -->
        <installer.dir>${project.build.directory}/installer</installer.dir>
        <installer.name>ProjectManagementTool</installer.name>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>


        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>


        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>


        <!--        添加SQLite依赖-->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.42.0.0</version>
        </dependency>



        <!--为了绘制双层饼图，添加JFreeChart依赖-->
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.1.2</version>
        </dependency>


    </dependencies>



    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>${module}/com.example.projectmanagement.Main
                            </mainClass>
                            <!--                            <launcher>app</launcher>-->
                            <jlinkZipName>app</jlinkZipName>
                            <jlinkImageName>app</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
                        </configuration>
                    </execution>
                </executions>
            </plugin>


            <!-- 打包插件（生成包含依赖的 fat jar） -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.example.projectmanagement.Main</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>




            <!-- 添加 maven-jpackage-plugin -->
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <name>${jpackage.image-name}</name>
                    <vendor>${jpackage.vendor}</vendor>
                    <appVersion>${jpackage.app-version}</appVersion>
                    <icon>src/main/resources/icon.${image-extension}</icon>
                    <mainClass>com.example.projectmanagement.Main</mainClass>
                    <module>${module}</module>
                    <runtimeImage>${project.build.directory}/app</runtimeImage>
                    <arguments>
                        <argument>--type</argument>
                        <argument>app-image</argument>
                        <argument>--input</argument>
                        <argument>${project.build.directory}</argument>
                        <argument>--dest</argument>
                        <argument>${installer.dir}</argument>
                        <argument>--name</argument>
                        <argument>${installer.name}</argument>
                        <argument>--java-options</argument>
                        <argument>--enable-preview</argument>
                        <!-- 添加 macOS 特定参数 -->
                        <argument>--mac-package-identifier</argument>
                        <argument>com.example.projectmanagement</argument>
                        <argument>--mac-package-name</argument>
                        <argument>ProjectManagement</argument>
                    </arguments>
                </configuration>
            </plugin>

        </plugins>




        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.fxml</include>
                    <include>**/*.txt</include>
                    <include>**/*.css</include>
                    <include>**/*.properties</include>
                    <include>**/*.png</include>
                    <include>**/*.ico</include>
                    <include>**/*.icns</include>
                </includes>
            </resource>
        </resources>
    </build>
</project>